k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-app
  template:
    metadata:
      name: frontend-pod
      labels:
        app: frontend-app
    spec:
      containers:
        - name: frontend-container
          image: docker.io/habr-app-demo/frontend:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 40002
