k8s/oom-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: oom-pod
spec:
  containers:
    - name: python-container
      image: python:bullseye
      command: ["python3", "-c", "[object() for _ in range(2**40)]"]
      resources:
        requests:
          memory: "128Mi"
          cpu: "100m"
        limits:
          memory: "256Mi"
          cpu: "200m"
