k8s/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: redis-app
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-statefulset
spec:
  selector:
    matchLabels:
      app: redis-app
  serviceName: redis-service
  replicas: 1
  template:
    metadata:
      labels:
        app: redis-app
    spec:
      containers:
        - name: redis-container
          image: redis:7.0.11-alpine
          ports:
            - containerPort: 6379
              name: redis-cli
